# vim: set noexpandtab:

2013-01-21 Steve
	* Updated DataPeriod enum
	* Tagging SusyNtuple-00-00-43

2013-01-21 Serhan Mete <amete@cern.ch>
	* SusyNtuple/SusyDefs.h: Added missing comma on L319

2013-01-20 Steve
	* Added EF_2mu8_EFxe40wMu_tclcw trigger

2013-01-17 Steve
	* Adding missing triggers for lep-tau trigger matching: EF_e18vh_medium1, EF_mu15
	* Adding pileup weight for periods I,L
	* Tagging SusyNtuple-00-00-42

2013-01-17 Steve
	* Tagging SusyNtuple-00-00-41

2013-01-16 Matt
	* Moving qoverp to muon class. Mistakenly added to Lepton class.
	* Update muon vars. ID q added, all MS variables added.
	* Add bch_corr_jet to jet class
	* Add passSmartVeto to SusyNtTools
	* Add passDeadRegions to SusyNtTools implementing FEB turn off in HEC
	         * taken from: https://indico.cern.ch/getFile.py/access?contribId=9&resId=0&materialId=slides&confId=223778
	         * This is current recommendation but slides imply study independently 

2013-01-15 Matt
	* Added two variables to muon class to handle qoverp.

2013-01-15 Serhan Mete <amete@cern.ch>
	* scripts/install.sh: Minor update to SUSYTools and DGTriggerReweight tags 

2013-01-14 Steve
	* Added D3PDTag enum value: D3PD_p1328
		* Missed the tag below, but this doesn't actually affect anything in the code
		  so I think I'll leave it for the next tag

2013-01-14 Steve
	* Added methods, options, and additional arguments necessary to correct lepton isolation 
	  for other nearby baseline leptons: removeLepsFromIso
		* Has been studied in the 4lep analysis
	  	* Turned off by default, still being studied for other analyses
		* Implementation of the correction is done in SusyNtTools methods. Does not overwrite iso, 
		  just returns the new iso: elPtConeCorr, elEtTopoConeCorr, muPtConeCorr, muEtConeCorr
		* Signal selection methods now require baseline lepton vectors as arguments
	* Minor cleanup
	* Tagging SusyNtuple-00-00-40

2012-12-23 Steve