@@ -39,6 +39,9 @@
 #pragma link C++ class Susy::Jet+;
 #pragma link C++ class Susy::Met+;
 #pragma link C++ class Susy::Event+;
+#pragma link C++ class Susy::TruthParticle+;
+#pragma link C++ class Susy::TruthJet+;
+#pragma link C++ class Susy::TruthMet+;
 
 // STL
 #pragma link C++ class std::vector< Susy::Particle >+;
@@ -49,6 +52,9 @@
 #pragma link C++ class std::vector< Susy::Photon >+;
 #pragma link C++ class std::vector< Susy::Jet >+;
 #pragma link C++ class std::vector< Susy::Met >+;
+#pragma link C++ class std::vector< Susy::TruthParticle >+;
+#pragma link C++ class std::vector< Susy::TruthJet >+;
+#pragma link C++ class std::vector< Susy::TruthMet >+;
 
 //Tools //optional to have this here ?
 #pragma link C++ class SusyNtTools+;
