@@ -24,6 +24,8 @@ namespace Susy
   class Jet;
   class Photon;
   class Met;
+  class TruthParticle;
+  class TruthJet;
 }
 
 //-----------------------------------------------------------------------------------
@@ -46,19 +48,23 @@ typedef std::vector<std::string> stringvector;
 
 // By request, but I don't like this
 /*
-typedef std::vector<const Susy::Lepton*>   LeptonVector;
-typedef std::vector<const Susy::Electron*> ElectronVector;
-typedef std::vector<const Susy::Muon*>     MuonVector;
-typedef std::vector<const Susy::Photon*>   PhotonVector;
-typedef std::vector<const Susy::Tau*>      TauVector;
-typedef std::vector<const Susy::Jet*>      JetVector;
+typedef std::vector<const Susy::Lepton*>        LeptonVector;
+typedef std::vector<const Susy::Electron*>      ElectronVector;
+typedef std::vector<const Susy::Muon*>          MuonVector;
+typedef std::vector<const Susy::Photon*>        PhotonVector;
+typedef std::vector<const Susy::Tau*>           TauVector;
+typedef std::vector<const Susy::Jet*>           JetVector;
+typedef std::vector<const Susy::TruthParticle*> TruthParticleVector;
+typedef std::vector<const Susy::TruthJet*>      TruthJetVector;
 */
-typedef std::vector<Susy::Lepton*>   LeptonVector;
-typedef std::vector<Susy::Electron*> ElectronVector;
-typedef std::vector<Susy::Muon*>     MuonVector;
-typedef std::vector<Susy::Photon*>   PhotonVector;
-typedef std::vector<Susy::Tau*>      TauVector;
-typedef std::vector<Susy::Jet*>      JetVector;
+typedef std::vector<Susy::Lepton*>        LeptonVector;
+typedef std::vector<Susy::Electron*>      ElectronVector;
+typedef std::vector<Susy::Muon*>          MuonVector;
+typedef std::vector<Susy::Photon*>        PhotonVector;
+typedef std::vector<Susy::Tau*>           TauVector;
+typedef std::vector<Susy::Jet*>           JetVector;
+typedef std::vector<Susy::TruthParticle*> TruthParticleVector;
+typedef std::vector<Susy::TruthJet*>      TruthJetVector;
 
 //-----------------------------------------------------------------------------------
 // Global enums
